# English-build

./: .env  .env.example  .gitignore  HUONG_DAN_HANG_NGAY.md  README.md  main.py  pyproject.toml  requirements.txt
downloads/: latest-search.json
downloads/hello/: download-report.json  search-results.json
downloads/i-love-you/: download-report.json  search-results.json
downloads/i-love-you/subtitles/: 001.ass  001.json  001.txt  002.ass  002.json  003.ass  003.json  003.txt  004.ass  004.json  004.txt  005.ass  005.json  005.txt
downloads/nice-to-meet-you/: download-report.json
downloads/nice-to-meet-you/subtitles/: 001.ass  001.json  001.txt  002.ass  002.json  003.ass  003.json  004.ass  004.json  004.txt  005.ass  005.json  006.ass  006.json  006.txt  007.ass  007.json  007.txt  008.ass  008.json  008.txt  009.ass  009.json  009.txt  010.ass  010.json  010.txt
downloads/search-cache/: i-love-you.json  nice-to-meet-you.json
downloads/see-you-around/: download-report.json  search-results.json
downloads/see-you-around/subtitles/: 001.ass  001.json  001.txt  002.ass  002.json  002.txt  003.ass  (+8 more)
downloads/what-s-going-on/: download-report.json  search-results.json
src/: __init__.py  browser.py  clipcafe.py  comb.py  commons.py  config.py  downloader.py  enhancer.py  flags.py  main.py  merger.py  search.py  subtitle.py  translations.py  utils.py
tests/: test_clipcafe.py  test_commons.py  test_config.py  test_downloader.py  test_enhancer.py  test_flags.py  test_main.py  test_merger.py  test_search.py  test_subtitle.py  test_translations.py  test_utils.py
(+15 files in other folders)
