[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playphrase-video-builder"
version = "1.0.0"
description = "Automate PlayPhrase search, clip downloads, subtitles, intro/outro generation, and final MP4 merging."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "PlayPhrase Video Builder" }]
license = { text = "MIT" }
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
playphrase-video-builder = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
